<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="accelerometer.example.com.dogplaydate.SignUp">
    <ImageView
        android:id="@+id/bg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/loginbg"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/fn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/fn"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bg"
        android:textSize="18dp"
        android:inputType="text"
        android:background="@drawable/edit_text_border"
        android:hint="First Name"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/ln"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/ln"
        android:layout_below="@id/bg"
        android:textSize="18dp"
        android:inputType="text"
        android:background="@drawable/edit_text_border"
        android:hint="Last Name"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/fn"
        android:text="@string/email"
        android:textSize="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="Email"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/pw"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/password"
        android:layout_below="@+id/email"
        android:background="@drawable/edit_text_border"
        android:hint="Password"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pw"
        android:text="@string/signup"
        android:onClick="signUp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp" />


</RelativeLayout>
